[gd_scene load_steps=5 format=3 uid="uid://dwi8g8brrqs2g"]

[ext_resource type="Script" path="res://TowerDefence/Enemy.gd" id="1_772a4"]
[ext_resource type="Texture2D" uid="uid://dttn2wrssnayr" path="res://TowerDefence/EnemyPlaceholder.png" id="2_r1lec"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ine1v"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i8n6q"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_772a4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ine1v")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_i8n6q")

[node name="EnemyPlaceholder" type="Sprite2D" parent="."]
texture = ExtResource("2_r1lec")

[node name="AttackCooldown" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
radius = 30.0
debug_enabled = true

[node name="debuginfo" type="Label" parent="."]
offset_left = 14.0
offset_top = -11.0
offset_right = 54.0
offset_bottom = 12.0

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
